# v2ecoli

./: .dockerignore  .gitignore  .gitmodules  .venv  AGENTS.md  CONTRIBUTING.md  Dockerfile  NEXT_STEPS.md  README.md  STATUS.md  Singularity.def  benchmark.py  colony_report.py  compare_architectures.py  compare_baseline.py  compare_report.py  compare_v1_v2.py  diagnose.py  investigate_post_shutoff.py  multigeneration.py  network_report.py  nutrient_growth_report.py  pyproject.toml  report.py  run_with_simple_metabolism.py  setup.py  sweep_glucose.py  sweep_vmax.py  test_types.py  tests.py  workflow.py  workspace.yaml
.github/: CODEOWNERS
.github/workflows/: benchmark.yml  build-and-push.yml  ci.yml  pages.yml  study-tests.yml  test.yml  workspace-ci.yml
.pbg/runs/: kfba-precursor-fluxes.json
.pbg/schemas/: workspace.schema.json
.pbg/server/: server-info
data/caglar2017/: README.md
doc/: benchmark_report.html  workflow_report.html
docs/: baseline_state.json  bigraph_baseline.html  bigraph_parca.html  biological_state.json  colony_network.html  colony_report.html  comparison_report.html  composite_comparison.html  departitioned_state.json  generate_full_parca.md  index.html  math_structure.html  multigeneration_report.html  network.html  network.json  network_baseline.html  network_biological.html  network_departitioned.html  network_reconciled.html  nutrient_growth_report.html  parca_network.html  parca_workflow_report.html  plasmid_experiment.md  reconciled_state.json  replication_initiation_report.html  v1_v2_comparison.html  workflow_report.html
docs/concepts/: study-spec.md
docs/math-audit/: 2026-05-30-formulation-opportunity-map.md  2026-05-30-units-on-ports-sweep-plan.md
docs/refactors/: calculate_trna_charging_numpy.md  metabolism_magnitude_arithmetic.md
docs/references/: replication_initiation.md
docs/superpowers/: elongation-refactor-report.html
investigations/chromosome-cycle-calibration/: investigation.yaml
investigations/colonies/: investigation.yaml
investigations/dnaa-replication/: STATUS.md  investigation.yaml
investigations/dnaa-replication-fresh/: investigation.yaml
investigations/full-lifecycle/: spec.yaml  study.yaml
investigations/multiscale-bioprocess/: investigation.yaml
investigations/v2ecoli-pdmp/: investigation.yaml
models/: departitioned.pbg  parca.pbg  partitioned.pbg
models/parca/: README.md  runtimes.json
pbg_v2ecoli/: __init__.py  core.py
references/: README.md  claims.yaml  papers.bib
references/data/: stage1_parameters.yaml
references/expert/: cell_side_interface_contract.md  palsson_2025_fed_batch.md  v2ecoli_replication_initiation_report.html
references/notes/: 2026-06-01-figure-and-prose-staleness.md  Berger2022NatCommun.md  Berger2023PRXLife.md  FuXiaoJun2023.md  Hansen1991ResMicrobiol.md  Hansen1999JBacteriol.md  Hansen2021FrontMolBiosci.md  Li2014Cell.md  Liu2020NatMicrobiol.md  Mori2021MolSysBiol.md  README.md  Schmidt2016NatBiotechnol.md  Sekimizu1991JBacteriol.md  wcm_stage1_parameters.md
reports/: benchmark_report.py  chromosome_partitioned_refactor.html  colony_report.py  compare_report.py  composite_comparison.py  findings.html  fold_changes_removed_audit_2026_05_23.html  index.html  math_structure_report.py  multigeneration_report.py  network_report.py  plasmid_dnag_investigation_v2ecoli.html  plasmid_network.html  plasmid_replication_report.html  replication_initiation_report.py  replication_partitioned_refactor.html  sweep_report.py  troubleshooting_2026_04_24_chromosome_gate.html  v1_v2_report.py  workflow_report.py
reports/assets/: style.css
reports/meeting_20260526/: issue_acetate_cycle_time.md  report.html  (+4 more)
scripts/: _fix_study_embeds.py  _polish_study_embed_captions.py  add-reference.sh  add_explicit_io.py  add_port_defaults.py  analyze_dnaa1_band.py  apply_mechanism_a.py  apply_merged_config_schema.py  audit_memory_scope.py  audit_readouts_honesty.py  backfill_runs_db.py  bench_baseline.py  bench_equiv.py  build_cache.py  build_condition_cache.py  build_plasmid_cache.py  cache_predivision.py  calibrate_dnaa_stage1.py  compare-runs.py  compare_initiation_modes.py  compare_pdmp_vs_baseline.py  compare_pdmp_vs_phase0.py  debug_multigen_daughter_crash.py  elongation_refactor_report.py  ensemble_validation.py  extend_multigen_from_dill.py  extract_schemas.py  extracted_schemas.pickle  full_port_defaults.pickle  gen_millard_real_viz.py  gen_pdmp_viz.py  gen_phase0_3condition_viz.py  gen_phase0_multigen_viz.py  gen_phase0_real_viz.py  gen_phase0_trajectory_viz.py  gen_single_study_report.py  improve_narrative_structure.py  linearize_millard.py  lint-workspace.py  measure_dnaa_at_steady_state.py  (+125 more)
tests/: _state_equal.py  conftest.py  test_analysis_runner.py  test_architecture_comparison.py  test_architectures_grow.py  test_baseline_default_emitter.py  test_baseline_overrides.py  test_behavior_mass_conservation.py  test_build_composite.py  test_cache_version.py  test_cell_cycle_regressions.py  test_chromosome_circle.py  test_composite_run_no_refire.py  test_composites_baseline.py  test_composites_colony.py  test_composites_departitioned.py  test_composites_reconciled.py  test_core.py  test_dars.py  test_ddah.py  test_departitioned.py  test_dnaA_autoregulation.py  test_dnaA_binding.py  test_dnaA_box_regions.py  test_dnaA_nucleotide_pool.py  test_emitter_bulk.py  test_emitter_presets.py  test_emitter_vecoli_parity.py  test_environment_driver_unit.py  test_fba_bridge.py  test_growth_parity.py  test_initialize.py  test_initiation_dnaA_gate.py  test_integration.py  test_kinetics_units.py  test_mass_conservation_listener.py  test_mbp_01_time_varying_environment.py  test_mbp_02_population_aggregation.py  test_meta_composite_build.py  test_model_behavior.py  (+52 more)
v2ecoli/: __init__.py  bridge.py  cache.py  colony.py  composite.py  composite_biological.py  composite_departitioned.py  composite_reconciled.py  composite_replication_initiation.py  core.py  generate.py  generate_biological.py  generate_departitioned.py  generate_reconciled.py  generate_replication_initiation.py  migrate.py  pbg.py
(+652 files in other folders)
