[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "v2ecoli"
version = "0.1.0"
description = "Whole-cell E. coli model on process-bigraph (partitioned architecture)"
readme = "README.md"
requires-python = "==3.12.9"
dependencies = [
    "bigraph-schema>=0.0.60",
    "process-bigraph>=0.0.38",
    "vEcoli[dev]>=1.1.0",
    "multi-cell>=0.0.1",
    "plum-dispatch>=2.5",
    "dill>=0.3",
    "numpy",
    "scipy",
    "pymunk",
    # ParCa (v2ecoli/processes/parca/) runtime dependencies
    "cvxpy",
    "biopython",
    "sympy",
    "pandas",
    "numba",
    "unum",
    "requests",
]

[project.optional-dependencies]
parca-build = ["cython", "setuptools>=68"]

[tool.setuptools.package-data]
# Ship the flat-file knowledge base with the package (~12.9 MB, 133 files).
"v2ecoli.processes.parca.reconstruction.ecoli" = ["flat/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "fast: runs without simulation cache (type tests, unit tests)",
    "slow: runs full simulations (60s+)",
    "behavior: model-behavior tests resumed from a saved checkpoint (seconds, not minutes)",
    "sim: calls composite.run() — longer than pure-state tests. CI routes these to a parallel behavior-tests job.",
]

[tool.setuptools]
packages = { find = { where = ["."] } }

[tool.uv.sources]
vecoli = { path = "../vEcoli", editable = true }
process-bigraph = { path = "../process-bigraph", editable = true }
bigraph-schema = { path = "../bigraph-schema", editable = true }
multi-cell = { path = "../viva-munk", editable = true }
