[build-system]
requires = ["setuptools>=68", "cython", "numpy>=2"]
build-backend = "setuptools.build_meta"

[project]
name = "v2ecoli"
version = "0.1.0"
description = "Whole-cell E. coli model on process-bigraph (partitioned architecture)"
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "bigraph-schema>=0.0.60",
    "process-bigraph>=0.0.38",
    "pbg-superpowers",
    "vEcoli[dev]>=1.1.0",
    "viva-munk>=0.0.1",
    "plum-dispatch>=2.5",
    "dill>=0.3",
    "numpy",
    "scipy",
    "pymunk",
    # ParCa (v2ecoli/processes/parca/) runtime dependencies
    "cvxpy",
    "biopython",
    "sympy",
    "pandas",
    "numba",
    "unum",
    "requests",
]

[project.optional-dependencies]
# Test-only deps. `uv sync --extra dev` pulls these in.
dev = ["pytest-timeout>=2.3"]
parquet = [
    "duckdb",
    "polars",
    "fsspec",
    "tqdm",
]
xarray = [
    "xarray>=2026.04",
    "zarr~=3.1.6",
    "zarrs>=0.2",
]
emitters = ["v2ecoli[parquet,xarray]"]

[project.scripts]
v2ecoli-parca = "v2ecoli.cli.parca:main"

[tool.setuptools.package-data]
# Ship the flat-file knowledge base with the package (~12.9 MB, 133 files).
"v2ecoli.processes.parca.reconstruction.ecoli" = ["flat/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "fast: runs without simulation cache (type tests, unit tests)",
    "slow: runs full simulations (60s+)",
    "behavior: model-behavior tests resumed from a saved checkpoint (seconds, not minutes)",
    "sim: calls composite.run() — longer than pure-state tests. CI routes these to a parallel behavior-tests job.",
]
# Per-test wall-clock cap. Safety net for any future hang in sim code.
# ``thread`` method interrupts C-level hangs (LSODA); note it calls
# os._exit(1) on timeout, so it kills the whole pytest run — tests
# should complete well under the cap.
timeout = 120
timeout_method = "thread"

[tool.setuptools]
packages = { find = { where = ["."] } }

[tool.uv.sources]
process-bigraph = { git = "https://github.com/vivarium-collective/process-bigraph.git", branch = "main" }
bigraph-schema = { git = "https://github.com/vivarium-collective/bigraph-schema.git", branch = "main" }
pbg-superpowers = { git = "https://github.com/vivarium-collective/pbg-superpowers.git", branch = "main" }
viva-munk = { git = "https://github.com/vivarium-collective/Viva-munk.git", branch = "main" }
